--- a/public/assets/css/play.css
+++ b/public/assets/css/play.css
@@ -1,7 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 body {
-  min-height: 98vh;
-  background-image: url('../img/background.png');
+  min-height: 100vh;
+  background-image: url('../img/backgroundCreateRoom.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  font-family: "Press Start 2p";
+}
+
+section {
+  min-height: 100vh;
+  background-image: url('../img/backgroundPlay.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+button {
+  background-color: #6e2d5e;
+  color: white;
+  border: 4px solid #42292b;
+  border-radius: 10px;
+  font-size: 4rem;
+  height: 160px;
+  width: 416px;
+}
+
+.div {
+  margin: 160px 32px 0px 0px !important;
 }
